fix menu wrap on narrow screens
- for screens above 66em (where we fold the search box) and below
  ~1100px the menu entries wrap to another line
- somewhat normal format for a 24" vertical screen
- fixed by reducing the extra wide search field

--- a/public/styles/top_p.css
+++ b/public/styles/top_p.css
@@ -1,6 +1,6 @@
 
 span#search-query {
-    width: 13em;
+    width: 11.5em;
 }
 
 table {
